--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>User</title>
 </head>
 <body>
 
 <div>
-  <p>Opret bruger</p>
+  <p>Opret donation</p>
 </div>
 
 <div>
-  <p>Login</p>
+  <p>Modtag donation</p>
 </div>
 
 <div>
