Added the link element. Still waiting for references for the other html pages.

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,15 +7,21 @@
 <body>
 
 <div>
+    <a href="">
   <p>Opret bruger</p>
+    </a>
 </div>
 
 <div>
+    <a href="">
   <p>Login</p>
+        </a>
 </div>
 
 <div>
+    <a href="">
   <p>Om os</p>
+    </a>
 </div>
 
 </body>
