--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -8,15 +8,21 @@
 
 
 <div>
+    <a href="">
   <p>Opret donation</p>
+    </a>>
 </div>
 
 <div>
+    <a href="">
   <p>Modtag donation</p>
+    </a>
 </div>
 
 <div>
+    <a href="">
   <p>Om os</p>
+    </a>
 </div>
 
 </body>
