Added link references

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,13 +7,13 @@
 <body>
 
 <div>
-    <a href="">
+    <a href="/create">
   <p>Opret bruger</p>
     </a>
 </div>
 
 <div>
-    <a href="">
+    <a href="/login">
   <p>Login</p>
         </a>
 </div>
