--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -13,9 +13,9 @@
 
 <div class="login">
     <form>
-        <label for="username">Username:</label><br>
+        <label for="username">Brugernavn:</label><br>
         <input type="text" id="username" name="username"><br>
-        <label for="pwd">Password:</label><br>
+        <label for="pwd">Kodeord:</label><br>
         <input type="password" id="pwd" name="pwd"><br>
         <input type="button" value="Login">
     </form>
