Added link references for the rest of the html pages.

--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -8,19 +8,19 @@
 
 
 <div>
-    <a href="">
+    <a href="/createDonation">
   <p>Opret donation</p>
     </a>>
 </div>
 
 <div>
-    <a href="">
+    <a href="/receiveDonation">
   <p>Modtag donation</p>
     </a>
 </div>
 
 <div>
-    <a href="">
+    <a href="/info">
   <p>Om os</p>
     </a>
 </div>
