Push af knap der går til userMenu

--- a/src/main/resources/templates/home/create.html
+++ b/src/main/resources/templates/home/create.html
@@ -29,7 +29,9 @@
 </div>
 
 <div class="createButton">
-  <button type="button">Opret bruger</button>
+  <form action="/userMenu" method="get">
+    <button type="submit">Opret bruger</button>
+  </form>
 </div>
 </body>
 </html>
