--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -25,7 +25,7 @@
         <label for="FAmount">Potioner</label><br>
         <input type="text" id="FAmount"><br>
 
-        <input type="submit" value="submit-donation">
+        <input type="submit" value="Opret donation">
     </form>
 
 </div>
