Commit af info side

--- a/src/main/resources/templates/home/info.html
+++ b/src/main/resources/templates/home/info.html
@@ -5,6 +5,18 @@
     <title>info</title>
 </head>
 <body>
+    <div>
+        <p>
+            Madspild er ikke godt. Vi har lavet denne side for at hjælpe alle jer Adems med at spilde mindre mad.
+            I kunne selvfølgelig også bare handle ordentligt ind og lægge en ordentlig plan. Så slipper i for at spilde alt den mad.
+            Vidste du godt at der i danmark bliver smidt mad ud der tilsvarer størrelsen af Sverige på månedlig basis.
+        </p>
+    </div>
 
+    <div>
+        <p>
+            Vores mission er at løse problemet.
+        </p>
+    </div>
 </body>
 </html>
