--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -22,7 +22,7 @@
         <label for="fName">Navn på ret</label><br>
         <input type="text" id="fName"><br>
 
-        <label for="FAmount">Potioner</label><br>
+        <label for="FAmount">Portioner</label><br>
         <input type="text" id="FAmount"><br>
 
         <input type="submit" value="Opret donation">
