Added dummies and basic html for receiving donations

--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -14,5 +14,29 @@
     </a>
 </section>
 
+<section>
+    <p>Butter Chicken</p>
+    <p>10 måltider</p>
+    <a>
+        <button>Reserver</button>
+    </a>
+</section>
+
+<section>
+    <p>Boller i karry</p>
+    <p>9 måltider</p>
+    <a>
+        <button>Reserver</button>
+    </a>
+</section>
+
+<section>
+    <p>Lasagne</p>
+    <p>14 måltider</p>
+    <a>
+        <button>Reserver</button>
+    </a>
+</section>
+
 </body>
 </html>
