Added navigation to createDonation and login

--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -7,6 +7,9 @@
 <body>
 <header>
     <nav>
+        <a href="/info"><p>Om os</p></a>
+        <a href="/create"><p>Opret bruger</p></a>
+        <a href="/login"><p>Login</p></a>
 
     </nav>
 </header>
