--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -9,34 +9,42 @@
 <section>
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
-    <a>
+    <p>Roskilde</p>
+    <a href="">
         <button>Reserver</button>
     </a>
 </section>
 
 <section>
-    <p>Butter Chicken</p>
-    <p>10 måltider</p>
-    <a>
-        <button>Reserver</button>
-    </a>
-</section>
-
-<section>
-    <p>Boller i karry</p>
-    <p>9 måltider</p>
-    <a>
+    <p>Frikadeller</p>
+    <p>8 måltider</p>
+    <p>Slagelse</p>
+    <a href="">
         <button>Reserver</button>
     </a>
 </section>
 
 <section>
     <p>Lasagne</p>
-    <p>14 måltider</p>
-    <a>
+    <p>9 måltider</p>
+    <p>København</p>
+    <a href="">
         <button>Reserver</button>
     </a>
 </section>
+
+<section>
+    <p>Boller i karry</p>
+    <p>10 måltider</p>
+    <p>Næstved</p>
+    <a href="">
+        <button>Reserver</button>
+    </a>
+</section>
+
+<a href="/userMenu">
+<button>Tilbage</button>
+</a>
 
 </body>
 </html>
