--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -7,6 +7,17 @@
 <body>
 
 <section>
+    <select name="location">
+        <option>Location</option>
+        <option>København</option>
+        <option>Roskilde</option>
+        <option>Næstved</option>
+        <option>Slagelse</option>
+
+    </select>
+</section>
+
+<section>
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
     <p>Roskilde</p>
@@ -43,7 +54,7 @@
 </section>
 
 <a href="/userMenu">
-<button>Tilbage</button>
+    <button>Tilbage</button>
 </a>
 
 </body>
