References for the link elements

--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -7,21 +7,23 @@
 <body>
 
 <section>
-    <select name="location">
-        <option>Location</option>
-        <option>København</option>
-        <option>Roskilde</option>
-        <option>Næstved</option>
-        <option>Slagelse</option>
 
-    </select>
+    <label for="location" ></label>
+        <select name="location" id="location">
+            <option>Location</option>
+            <option>København</option>
+            <option>Roskilde</option>
+            <option>Næstved</option>
+            <option>Slagelse</option>
+        </select>
+
 </section>
 
 <section>
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
     <p>Roskilde</p>
-    <a href="">
+    <a href="/confirmDonation">
         <button>Reserver</button>
     </a>
 </section>
@@ -30,7 +32,7 @@
     <p>Frikadeller</p>
     <p>8 måltider</p>
     <p>Slagelse</p>
-    <a href="">
+    <a href="/confirmDonation">
         <button>Reserver</button>
     </a>
 </section>
@@ -39,7 +41,7 @@
     <p>Lasagne</p>
     <p>9 måltider</p>
     <p>København</p>
-    <a href="">
+    <a href="/confirmDonation">
         <button>Reserver</button>
     </a>
 </section>
@@ -48,7 +50,7 @@
     <p>Boller i karry</p>
     <p>10 måltider</p>
     <p>Næstved</p>
-    <a href="">
+    <a href="/confirmDonation">
         <button>Reserver</button>
     </a>
 </section>
