--- a/src/main/resources/templates/home/confirmDonation.html
+++ b/src/main/resources/templates/home/confirmDonation.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p>Donation bekræftet</p>
+<p>Reservation bekræftet</p>
 <a href="/userMenu">
 <button>Gå tilbage til menuen</button>
 </a>
