Updated the navigations between html pages.

--- a/src/main/resources/templates/home/confirmReservation.html
+++ b/src/main/resources/templates/home/confirmReservation.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<p>Donation modtaget</p>
+<p>Reservation bekræftet</p>
 <a href="/userMenu">
-    <button>Gå tilbage til menuen</button>
+<button>Gå tilbage til menuen</button>
 </a>
 
 </body>
