--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -12,7 +12,7 @@
 </header>
 
 <div class="create-donation">
-    <form>
+    <form action="/confirmDonation">
         <label for="CName">Firma</label><br>
         <input type="text" id="CName"><br>
 
@@ -22,10 +22,11 @@
         <label for="fName">Navn på ret</label><br>
         <input type="text" id="fName"><br>
 
-        <label for="FAmount">Potioner</label><br>
+        <label for="FAmount">Portioner</label><br>
         <input type="text" id="FAmount"><br>
 
         <input type="submit" value="submit-donation">
+
     </form>
 
 </div>
