--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -23,7 +23,7 @@
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
     <p>Roskilde</p>
-    <a href="/confirmDonation">
+    <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
 </section>
@@ -32,7 +32,7 @@
     <p>Frikadeller</p>
     <p>8 måltider</p>
     <p>Slagelse</p>
-    <a href="/confirmDonation">
+    <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
 </section>
@@ -41,7 +41,7 @@
     <p>Lasagne</p>
     <p>9 måltider</p>
     <p>København</p>
-    <a href="/confirmDonation">
+    <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
 </section>
@@ -50,7 +50,7 @@
     <p>Boller i karry</p>
     <p>10 måltider</p>
     <p>Næstved</p>
-    <a href="/confirmDonation">
+    <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
 </section>
