Commit af navigation

--- a/src/main/resources/templates/home/create.html
+++ b/src/main/resources/templates/home/create.html
@@ -6,6 +6,25 @@
 </head>
 <body>
 
+<div>
+  <a href="/create">
+    <p>Opret bruger</p>
+  </a>
+</div>
+
+<div>
+  <a href="/login">
+    <p>Login</p>
+  </a>
+</div>
+
+<div>
+  <a href="/info">
+    <p>Om os</p>
+  </a>
+</div>
+
+
 <div class="selectCompanyOrOrganisatoin">
   <label for="company"> Virksomhed </label>
   <input type="checkbox" id="company" name="company" value="company"> <br>
