--- a/src/main/resources/templates/home/info.html
+++ b/src/main/resources/templates/home/info.html
@@ -5,6 +5,26 @@
     <title>info</title>
 </head>
 <body>
+
+<div>
+    <a href="/create">
+        <p>Opret bruger</p>
+    </a>
+</div>
+
+<div>
+    <a href="/login">
+        <p>Login</p>
+    </a>
+</div>
+
+<div>
+    <a href="/info">
+        <p>Om os</p>
+    </a>
+</div>
+
+
     <div>
         <p>
             Madspild er ikke godt. Vi har lavet denne side for at hjælpe alle jer Adems med at spilde mindre mad.
