--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -11,6 +11,25 @@
     </nav>
 </header>
 
+<div>
+    <a href="/create">
+        <p>Opret bruger</p>
+    </a>
+</div>
+
+<div>
+    <a href="/login">
+        <p>Login</p>
+    </a>
+</div>
+
+<div>
+    <a href="/info">
+        <p>Om os</p>
+    </a>
+</div>
+
+
 <div class="login">
     <form>
         <label for="username">Brugernavn:</label><br>
