--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -11,23 +11,11 @@
     </nav>
 </header>
 
-<div>
-    <a href="/create">
-        <p>Opret bruger</p>
-    </a>
-</div>
-
-<div>
-    <a href="/login">
-        <p>Login</p>
-    </a>
-</div>
-
-<div>
-    <a href="/info">
-        <p>Om os</p>
-    </a>
-</div>
+<nav>
+    <a href="/create"><p>Opret bruger</p></a>
+    <a href="/login"><p>Login</p></a>
+    <a href="/info"><p>Om os</p></a>
+</nav>
 
 
 <div class="login">
