--- a/src/main/resources/templates/home/confirmDonation.html
+++ b/src/main/resources/templates/home/confirmDonation.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<nav>
+    <a href="index.html"><img src=""><p>home</p></a>
+    <a href="/info"><p>Om os</p></a>
+    <a href="/createDonation"><p>Opret donation</p></a>
+    <a href="/receiveDonation"><p>Modtag donation</p></a>
+    <a href="index.html"><p>Log ud</p></a>
+</nav>
 
 <p>Donation modtaget</p>
 <a href="/userMenu">
