--- a/src/main/resources/templates/home/confirmReservation.html
+++ b/src/main/resources/templates/home/confirmReservation.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 
+<nav>
+    <a href="index.html"><img src="" ><p>home</p></a>
+    <a href="/info"><p>Om os</p></a>
+    <a href="/createDonation"><p>Opret donation</p></a>
+    <a href="/receiveDonation"><p>Modtag donation</p></a>
+    <a href="index.html"><p>Log ud</p></a>
+</nav>
+
 <p>Reservation bekræftet</p>
 <a href="/userMenu">
 <button>Gå tilbage til menuen</button>
