--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -7,7 +7,11 @@
 <body>
 <header>
     <nav>
-
+        <a href="index.html"><img src="" ><p>home</p></a>
+        <a href="/info"><p>Om os</p></a>
+        <a href="/createDonation"><p>Opret donation</p></a>
+        <a href="/receiveDonation"><p>Modtag donation</p></a>
+        <a href="index.html"><p>Log ud</p></a>
     </nav>
 </header>
 
