--- a/src/main/resources/templates/home/info.html
+++ b/src/main/resources/templates/home/info.html
@@ -7,24 +7,26 @@
 <body>
 
 <nav>
+    <a href="index.html"><img src=""><p>home</p></a>
+    <a href="/info"><p>Om os</p></a>
     <a href="/create"><p>Opret bruger</p></a>
     <a href="/login"><p>Login</p></a>
-    <a href="/info"><p>Om os</p></a>
 </nav>
 
 
-    <div>
-        <p>
-            Madspild er ikke godt. Vi har lavet denne side for at hjælpe alle jer Adems med at spilde mindre mad.
-            I kunne selvfølgelig også bare handle ordentligt ind og lægge en ordentlig plan. Så slipper i for at spilde alt den mad.
-            Vidste du godt at der i danmark bliver smidt mad ud der tilsvarer størrelsen af Sverige på månedlig basis.
-        </p>
-    </div>
+<div>
+    <p>
+        Madspild er ikke godt. Vi har lavet denne side for at hjælpe alle jer Adems med at spilde mindre mad.
+        I kunne selvfølgelig også bare handle ordentligt ind og lægge en ordentlig plan. Så slipper i for at spilde alt
+        den mad.
+        Vidste du godt at der i danmark bliver smidt mad ud der tilsvarer størrelsen af Sverige på månedlig basis.
+    </p>
+</div>
 
-    <div>
-        <p>
-            Vores mission er at løse problemet.
-        </p>
-    </div>
+<div>
+    <p>
+        Vores mission er at løse problemet.
+    </p>
+</div>
 </body>
 </html>
