--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -6,16 +6,25 @@
 </head>
 <body>
 
+<nav>
+    <a href="index.html"><img src=""><p>home</p></a>
+    <a href="/info"><p>Om os</p></a>
+    <a href="/createDonation"><p>Opret donation</p></a>
+    <a href="/receiveDonation"><p>Modtag donation</p></a>
+    <a href="index.html"><p>Log ud</p></a>
+</nav>
+
+
 <section>
 
-    <label for="location" ></label>
-        <select name="location" id="location">
-            <option>Location</option>
-            <option>København</option>
-            <option>Roskilde</option>
-            <option>Næstved</option>
-            <option>Slagelse</option>
-        </select>
+    <label for="location"></label>
+    <select name="location" id="location">
+        <option>Location</option>
+        <option>København</option>
+        <option>Roskilde</option>
+        <option>Næstved</option>
+        <option>Slagelse</option>
+    </select>
 
 </section>
 
