--- a/src/main/resources/templates/home/info.html
+++ b/src/main/resources/templates/home/info.html
@@ -14,7 +14,10 @@
 </nav>
 
 
-<div>
+<div class="madspild-info">
+    <h1>
+	om os
+    </h1>	
     <p>
         Madspild er ikke godt. Vi har lavet denne side for at hjælpe alle jer Adems med at spilde mindre mad.
         I kunne selvfølgelig også bare handle ordentligt ind og lægge en ordentlig plan. Så slipper i for at spilde alt
@@ -23,7 +26,10 @@
     </p>
 </div>
 
-<div>
+<div class="mission">
+    <h1>
+	Vores mission
+    </h1>	
     <p>
         Vores mission er at løse problemet.
     </p>
