--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>createDonationPage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
