Updated the html to improve layout.

--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>User</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="round-text-field-display">
 
-<div>
-    <a href="/createDonation">
-  <p>Opret donation</p>
+    <a href="/createDonation" class="round-text-field green">
+        <p>Opret donation</p>
     </a>
+
+    <a href="/receiveDonation" class="round-text-field orange">
+        <p>Modtag donation</p>
+    </a>
+
 </div>
 
-<div>
-    <a href="/receiveDonation">
-  <p>Modtag donation</p>
-    </a>
-</div>
-
-<div>
-    <a href="/info">
-  <p>Om os</p>
-    </a>
-</div>
 
 </body>
 </html>
