Changing of navigation on HTML pages where you are logged in

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -19,12 +19,17 @@
 </div>
 
 <div class="circles">
-    <div class="circle companyInfo">
-        <p>Hvis din virksomhed har overskydende mad fra jeres kantine kan I donere det til hjemløse eller sociale køkkener</p>
+
+    <div class="circle">
+        <div class="companyInfo">
+            <p>Hvis din virksomhed har overskydende mad fra jeres kantine kan I donere det til hjemløse eller sociale køkkener</p>
+        </div>
     </div>
 
-    <div class="circle organisationInfo">
-        <p>Er du en organisation der arbejder med hjemløse eller socialt udsatte kan du modtage donationer</p>
+    <div class="circle">
+        <div class="organisationInfo">
+            <p>Er du en organisation der arbejder med hjemløse eller socialt udsatte kan du modtage donationer</p>
+        </div>
     </div>
 </div>
 
