--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -8,11 +8,11 @@
 <body>
 
 <nav>
-    <a href="index.html"><img src=""><p>home</p></a>
+    <a href="/userMenu"><img src=""><p>home</p></a>
     <a href="/info"><p>Om os</p></a>
     <a href="/createDonation"><p>Opret donation</p></a>
     <a href="/receiveDonation"><p>Modtag donation</p></a>
-    <a href="index.html"><p>Log ud</p></a>
+    <a href="/"><p>Log ud</p></a>
 </nav>
 
 
@@ -29,41 +29,41 @@
 
 </section>
 
-<section>
+<div class="donationBoxes">
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
     <p>Roskilde</p>
     <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
-</section>
+</div>
 
-<section>
+<div class="donationBoxes">
     <p>Frikadeller</p>
     <p>8 måltider</p>
     <p>Slagelse</p>
     <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
-</section>
+</div>
 
-<section>
+<div class="donationBoxes">
     <p>Lasagne</p>
     <p>9 måltider</p>
     <p>København</p>
     <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
-</section>
+</div>
 
-<section>
+<div class="donationBoxes">
     <p>Boller i karry</p>
     <p>10 måltider</p>
     <p>Næstved</p>
     <a href="/confirmReservation">
         <button>Reserver</button>
     </a>
-</section>
+</div>
 
 <a href="/userMenu">
     <button>Tilbage</button>
