--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -16,3 +16,54 @@ nav a:hover {
 	background-color: #ddd;
 	color: black;
 }
+
+
+.frontPageTitle {
+	text-align: center;
+	margin-bottom: 3rem;
+}
+.companyInfo {
+	float: left;
+}
+
+.organisationInfo {
+	float: right;
+}
+
+.circles {
+	width: 600px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+}
+
+.circle {
+	width: 200px;
+	height: 200px;
+	background: #C6ECD9;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+.donationBoxes {
+
+	border: 1px solid #000;
+	padding: 10px;
+	width: calc(33.333% - 10px);
+	box-sizing: border-box;
+	text-align: center;
+}
+.circle p {
+	padding: 20px;
+	font-size: 14px;
+}
+
+
+button {
+	padding: 5px 10px;
+}
