--- a/src/main/resources/templates/home/create.html
+++ b/src/main/resources/templates/home/create.html
@@ -8,7 +8,7 @@
 <body>
 
 <nav>
-    <a href="index.html"><img src="" ><p>home</p></a>
+    <a href="/"><img src="Guts_avatar.jpg" alt="Gutse Putse"></a>
     <a href="/info"><p>Om os</p></a>
     <a href="/create"><p>Opret bruger</p></a>
     <a href="/login"><p>Login</p></a>
