--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -29,7 +29,7 @@
 
 </section>
 
-<div class="donationBoxes">
+<div class="donationBoxes" id="box1">
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
     <p>Roskilde</p>
@@ -38,7 +38,7 @@
     </a>
 </div>
 
-<div class="donationBoxes">
+<div class="donationBoxes" id="box2">
     <p>Frikadeller</p>
     <p>8 måltider</p>
     <p>Slagelse</p>
@@ -47,7 +47,7 @@
     </a>
 </div>
 
-<div class="donationBoxes">
+<div class="donationBoxes" id="box3">
     <p>Lasagne</p>
     <p>9 måltider</p>
     <p>København</p>
@@ -56,7 +56,7 @@
     </a>
 </div>
 
-<div class="donationBoxes">
+<div class="donationBoxes" id="box4">
     <p>Boller i karry</p>
     <p>10 måltider</p>
     <p>Næstved</p>
