--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,7 @@
 nav {
 	overflow: hidden;
 	background-color: #40bf80;
+	border-radius: 8px;
 }
 
 nav a {
@@ -16,3 +17,29 @@ nav a:hover {
 	background-color: #ddd;
 	color: black;
 }
+
+
+/* CSS FOR LOGIN */
+
+.login {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.login form {
+	width: 250px;
+	height: 250px;
+
+	padding: 20px;
+	border-radius: 8px;
+	background-color: #c6ecd9;
+}
+
+form {
+	display: grid;
+	place-items: center;
+}
+
+form label {
+text-align: right}
