--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <nav>
-        <a href="/userMenu"><img src="Guts_avatar.jpg" alt="Gutse Putse"></a>
+        <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
         <a href="/info"><p>Om os</p></a>
         <a href="/createDonation"><p>Opret donation</p></a>
         <a href="/receiveDonation"><p>Modtag donation</p></a>
