--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav>
-    <a href="/userMenu"><img src="Guts_avatar.jpg" alt="Gutse Putse"></a>
+    <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
     <a href="/info"><p>Om os</p></a>
     <a href="/createDonation"><p>Opret donation</p></a>
     <a href="/receiveDonation"><p>Modtag donation</p></a>
