--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -8,7 +8,7 @@
 <body>
 
 <nav>
-    <a href="index.html"><img src="" ><p>home</p></a>
+    <a href="/"><img src="Guts_avatar.jpg" alt="Gutse Putse"></a>
     <a href="/info"><p>Om os</p></a>
     <a href="/create"><p>Opret bruger</p></a>
     <a href="/login"><p>Login</p></a>
@@ -16,10 +16,10 @@
 
 <div class="login">
     <form action="/userMenu" method="get">
-        <label for="username">Brugernavn:</label><br>
-        <input type="text" id="username" name="username"><br>
+        <label for="username">Brugernavn:</label>
+        <input type="text" id="username" name="username">
 
-        <label for="pwd">Kodeord:</label><br>
+        <label for="pwd">Kodeord:</label>
         <input type="password" id="pwd" name="pwd"><br>
 
         <button type="submit">Login</button>
