--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <nav>
-        <a href="/userMenu"><img src="" ><p>home</p></a>
+        <a href="/userMenu"><img src="Guts_avatar.jpg" alt="Gutse Putse"></a>
         <a href="/info"><p>Om os</p></a>
         <a href="/createDonation"><p>Opret donation</p></a>
         <a href="/receiveDonation"><p>Modtag donation</p></a>
@@ -16,25 +16,31 @@
     </nav>
 </header>
 
-<div class="create-donation">
-    <form action="/confirmDonation">
-        <label for="CName">Firma</label><br>
-        <input type="text" id="CName"><br>
+    <form action="/confirmDonation" class="menu">
 
-        <label for="location">Lokation</label><br>
-        <input type="text" id="location"><br>
+        <div>
+        <label for="CName">Firma:</label>
+        <input type="text" id="CName">
+        </div>
 
-        <label for="fName">Navn på ret</label><br>
-        <input type="text" id="fName"><br>
+        <div>
+        <label for="location">Lokation:</label>
+        <input type="text" id="location">
+        </div>
 
-        <label for="FAmount">Portioner</label><br>
-        <input type="text" id="FAmount"><br>
+        <div>
+        <label for="fName">Navn på ret:</label>
+        <input type="text" id="fName">
+        </div>
 
-        <input type="submit" value="submit-donation">
+        <div>
+        <label for="FAmount">Portioner:</label>
+        <input type="text" id="FAmount">
+        </div>
+
+        <input type="submit" value="bekræft donation">
 
     </form>
-
-</div>
 
 </body>
 </html>
