--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -35,16 +35,19 @@ nav a:hover {
     color: black;
 }
 
-nav a img {
-    display: inline-block;
-    vertical-align: middle;
-}
-
 nav a p {
     display: inline-block;
     margin: 0;
     color: inherit;
     font-size: 1em;
+}
+
+nav img {
+    width: 40px;
+    height: auto;
+    border-radius: 50%;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .madspild-info,
@@ -109,7 +112,7 @@ h1::after {
     }
 }
 
-
+/* Front page */
 .frontPageTitle {
 	text-align: center;
 	margin-bottom: 3rem;
