--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -19,6 +19,10 @@
     <form action="/confirmDonation" class="menu">
 
         <div>
+            <h1>Opret donation</h1>
+        </div>
+
+        <div>
         <label for="CName">Firma:</label>
         <input type="text" id="CName">
         </div>
