--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -16,11 +16,11 @@
 
 <div class="round-text-field-display">
 
-    <a href="/createDonation" class="round-text-field green">
+    <a href="/createDonation" class="round-text-field">
         <p>Opret donation</p>
     </a>
 
-    <a href="/receiveDonation" class="round-text-field orange">
+    <a href="/receiveDonation" class="round-text-field">
         <p>Modtag donation</p>
     </a>
 
