--- a/src/main/resources/templates/home/create.html
+++ b/src/main/resources/templates/home/create.html
@@ -9,9 +9,11 @@
 
 <nav>
     <a href="/"><img src="logo.png" alt="Gutse Putse"></a>
+    <div class="nav-links">
     <a href="/info"><p>Om os</p></a>
     <a href="/create"><p>Opret bruger</p></a>
     <a href="/login"><p>Login</p></a>
+    </div>
 </nav>
 
 
