--- a/src/main/resources/templates/home/confirmReservation.html
+++ b/src/main/resources/templates/home/confirmReservation.html
@@ -9,10 +9,12 @@
 
 <nav>
     <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
+    <div class="nav-links">
     <a href="/info"><p>Om os</p></a>
     <a href="/createDonation"><p>Opret donation</p></a>
     <a href="/receiveDonation"><p>Modtag donation</p></a>
     <a href="/"><p>Log ud</p></a>
+    </div>
 </nav>
 
 <p>Reservation bekræftet</p>
