--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -8,10 +8,12 @@
 <body>
 <nav>
     <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
+    <div class="nav-links">
     <a href="/info"><p>Om os</p></a>
     <a href="/createDonation"><p>Opret donation</p></a>
     <a href="/receiveDonation"><p>Modtag donation</p></a>
     <a href="/"><p>Log ud</p></a>
+    </div>
 </nav>
 
 <div class="round-text-field-display">
