--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -352,3 +352,86 @@ button {
     background-color: #79D2A6;
     color: #FFFFFF;
 }
+
+.menu {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #C6ECD9;
+    max-width: 20%;
+    margin: 20px auto;
+    padding: 20px 20px 20px;
+    font-size: 13px;
+    border-radius: 15px;
+
+
+}
+
+.menu div {
+
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-bottom: 8%;
+    width: 100%;
+
+}
+
+.menu h1 {
+
+    text-align: center;
+    font-size: 20px;
+    white-space: nowrap;
+
+}
+
+.menu label {
+
+    text-align: left;
+    font-weight: bold;
+    min-width: 100px;
+
+}
+
+.menu input[type="text"] {
+
+    flex: 1;
+
+}
+
+.menu input[type="submit"] {
+
+    align-self: center;
+    font-size: 10px;
+    width: 40%;
+
+}
+
+.round-text-field-display {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20%;
+    margin-top: 15%;
+
+}
+
+.round-text-field {
+
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 30px;
+    text-decoration: none;
+    background-color: #C6ECD9;
+    color: black;
+
+}
+
