Change of info html when you are logged in

--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
         <div class="nav-links">
-        <a href="/info"><p>Om os</p></a>
+        <a href="/loggedInInfo"><p>Om os</p></a>
         <a href="/createDonation"><p>Opret donation</p></a>
         <a href="/receiveDonation"><p>Modtag donation</p></a>
         <a href="/"><p>Log ud</p></a>
