--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -129,6 +129,7 @@ h1::after {
 	text-align: center;
 	margin-bottom: 3rem;
     color: white;
+    font-family: 'Poppins', sans-serif;
 }
 .companyInfo {
 	float: left;
