Applying consistency to Login and CreateLogin

--- a/src/main/resources/templates/home/create.html
+++ b/src/main/resources/templates/home/create.html
@@ -26,13 +26,13 @@
 
 <div class="create-login">
     <form action="/userMenu" method="get">
-        <label><b>Brugernavn</b></label>
+        <label>Brugernavn:</label>
         <input type="text" placeholder="Indtast brugernavn">
 
-        <label><b>Kodeord</b></label>
+        <label>Kodeord:</label>
         <input type="text" placeholder="Indtast kodeord">
 
-        <label><b>Gentag Kodeord</b></label>
+        <label>Gentag Kodeord:</label>
         <input type="text" placeholder="Gentag kodeord"><br>
 
         <button type="submit">Opret bruger</button>
