--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -19,10 +19,10 @@
 <div class="login">
     <form action="/userMenu" method="get">
         <label for="username">Brugernavn:</label>
-        <input type="text" id="username" name="username">
+        <input type="text" id="username" name="username" placeholder="Indtast brugernavn">
 
         <label for="pwd">Kodeord:</label>
-        <input type="password" id="pwd" name="pwd"><br>
+        <input type="password" id="pwd" name="pwd" placeholder="Indtast kodeord"><br>
 
         <button type="submit">Login</button>
     </form>
