--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -44,7 +44,7 @@
         <input type="text" id="FAmount">
         </div>
 
-        <input type="submit" value="Bekræft Donation">
+        <button type="submit">Bekræft donation</button>
 
     </form>
 
