--- a/src/main/resources/templates/home/receiveDonation.html
+++ b/src/main/resources/templates/home/receiveDonation.html
@@ -31,6 +31,7 @@
 
 </section>
 
+<section class="donation-container">
 <div class="donationBoxes" id="box1">
     <p>Spaghetti med kødsovs</p>
     <p>5 måltider</p>
@@ -66,6 +67,7 @@
         <button>Reserver</button>
     </a>
 </div>
+</section>
 
 </body>
 </html>
