--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -24,25 +24,13 @@
             <h1>Opret donation</h1>
         </div>
 
-        <div>
-        <label for="CName">Firma:</label>
-        <input type="text" id="CName">
-        </div>
+        <input type="text" id="CName" placeholder="Firma navn">
 
-        <div>
-        <label for="location">Lokation:</label>
-        <input type="text" id="location">
-        </div>
+        <input type="text" id="location" placeholder="Lokation">
 
-        <div>
-        <label for="fName">Navn på ret:</label>
-        <input type="text" id="fName">
-        </div>
+        <input type="text" id="fName" placeholder="Navn på ret">
 
-        <div>
-        <label for="FAmount">Portioner:</label>
-        <input type="text" id="FAmount">
-        </div>
+        <input type="text" id="FAmount" placeholder="antal portioner">
 
         <button type="submit">Bekræft donation</button>
 
