--- a/src/main/resources/templates/home/createDonation.html
+++ b/src/main/resources/templates/home/createDonation.html
@@ -20,17 +20,21 @@
 
     <form action="/confirmDonation" class="menu">
 
-        <div>
-            <h1>Opret donation</h1>
-        </div>
+        <label>Firma navn:
+        <input type="text" id="CName">
+        </label>
 
-        <input type="text" id="CName" placeholder="Firma navn">
+        <label>Lokation:
+        <input type="text" id="location">
+        </label>
 
-        <input type="text" id="location" placeholder="Lokation">
+        <label>Navn på ret:
+        <input type="text" id="fName">
+        </label>
 
-        <input type="text" id="fName" placeholder="Navn på ret">
-
-        <input type="text" id="FAmount" placeholder="antal portioner">
+        <label>Antal portioner:
+        <input type="text" id="FAmount">
+        </label>
 
         <button type="submit">Bekræft donation</button>
 
