--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -35,5 +35,30 @@
     </div>
 </div>
 
+<footer class="footer-info">
+    <div class="footer-headers">
+        <h3>Find os</h3>
+    </div>
+    <div class="footer-content">
+        <p> Gørløse </p>
+        <p> Gørløsevænge 46 </p>
+        <p> 3330 Gørløse </p>
+    </div>
+    <div class="footer-headers">
+        <h3>Kontakt os</h3>
+    </div>
+    <div class="footer-content">
+        <p> Tlf: 27 13 19 16 </p>
+        <p> madspild@donation.dk </p>
+    </div>
+    <div class="footer-headers">
+        <h3>Følg os</h3>
+    </div>
+    <div class="footer-content">
+        <a href=Guts_avatar.jpg alt="Gutse Putse"><p>Facebook</p></a>
+        <a href=Guts_avatar.jpg alt="Gutse Putse"><p>LinkedIn</p></a>
+    </div>
+</footer>
+
 </body>
 </html>
