--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -455,3 +455,28 @@ button {
 
 }
 
+/*Footer All Pages */
+footer {
+    background-color: #40bf80;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    margin-top: 40px;
+}
+
+footer h3 {
+    margin-bottom: 10px;
+    font-size: 1.2rem;
+}
+
+footer p,
+footer a {
+    margin: 5px 0;
+    color: white;
+    text-decoration: none;
+    font-size: 0.95rem;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
