--- a/src/main/resources/templates/home/confirmDonation.html
+++ b/src/main/resources/templates/home/confirmDonation.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<nav>
-    <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
-    <div class="nav-links">
-    <a href="/loggedInInfo"><p>Om os</p></a>
-    <a href="/createDonation"><p>Opret donation</p></a>
-    <a href="/receiveDonation"><p>Modtag donation</p></a>
-    <a href="/"><p>Log ud</p></a>
-    </div>
-</nav>
 
-<p>Donation modtaget</p>
-<a href="/userMenu">
-    <button>Gå tilbage til menuen</button>
-</a>
+<head>
+	<meta charset="UTF-8">
+	<title>Title</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<nav>
+		<a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
+		<div class="nav-links">
+			<a href="/loggedInInfo">
+				<p>Om os</p>
+			</a>
+			<a href="/createDonation">
+				<p>Opret donation</p>
+			</a>
+			<a href="/receiveDonation">
+				<p>Modtag donation</p>
+			</a>
+			<a href="/">
+				<p>Log ud</p>
+			</a>
+		</div>
+	</nav>
+
+	<p>Donation modtaget</p>
+	<a href="/userMenu">
+		<button>Gå tilbage til menuen</button>
+	</a>
+
+	<a href="/userMenu">
+		<button>Anuller</button>
+	</a>
 
 </body>
+
 </html>
