--- a/src/main/resources/templates/home/confirmReservation.html
+++ b/src/main/resources/templates/home/confirmReservation.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<title>Title</title>
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<nav>
-    <a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
-    <div class="nav-links">
-    <a href="/loggedInInfo"><p>Om os</p></a>
-    <a href="/createDonation"><p>Opret donation</p></a>
-    <a href="/receiveDonation"><p>Modtag donation</p></a>
-    <a href="/"><p>Log ud</p></a>
-    </div>
-</nav>
+	<nav>
+		<a href="/userMenu"><img src="logo.png" alt="Gutse Putse"></a>
+		<div class="nav-links">
+			<a href="/loggedInInfo">
+				<p>Om os</p>
+			</a>
+			<a href="/createDonation">
+				<p>Opret donation</p>
+			</a>
+			<a href="/receiveDonation">
+				<p>Modtag donation</p>
+			</a>
+			<a href="/">
+				<p>Log ud</p>
+			</a>
+		</div>
+	</nav>
 
-<p>Reservation bekræftet</p>
-<a href="/userMenu">
-<button>Gå tilbage til menuen</button>
-</a>
+	<p class="">Reservation bekræftet</p>
+	<a href="/userMenu">
+		<button>Gå tilbage til menuen</button>
+
+		<a href="/userMenu">
+			<button>Anuller</button>
+		</a>
+
+
+	</a>
 
 </body>
+
 </html>
