Adding footer to all html pages

--- a/src/main/resources/templates/home/userMenu.html
+++ b/src/main/resources/templates/home/userMenu.html
@@ -16,6 +16,10 @@
     </div>
 </nav>
 
+<div class="frontPageTitle">
+    <h2>Når overskud bliver omsorg</h2>
+</div>
+
 <div class="round-text-field-display">
 
     <a href="/createDonation" class="round-text-field">
@@ -27,6 +31,31 @@
     </a>
 
 </div>
+
+<footer class="footer-info">
+    <div class="footer-headers">
+        <h3>Find os</h3>
+    </div>
+    <div class="footer-content">
+        <p> Gørløse </p>
+        <p> Gørløsevænge 46 </p>
+        <p> 3330 Gørløse </p>
+    </div>
+    <div class="footer-headers">
+        <h3>Kontakt os</h3>
+    </div>
+    <div class="footer-content">
+        <p> Tlf: 27 13 19 16 </p>
+        <p> madspild@donation.dk </p>
+    </div>
+    <div class="footer-headers">
+        <h3>Følg os</h3>
+    </div>
+    <div class="footer-content">
+        <a href=Guts_avatar.jpg alt="Gutse Putse"><p>Facebook</p></a>
+        <a href=Guts_avatar.jpg alt="Gutse Putse"><p>LinkedIn</p></a>
+    </div>
+</footer>
 
 
 </body>
