--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -127,7 +127,7 @@ h1::after {
 /* Front page */
 .frontPageTitle {
 	text-align: center;
-	margin-bottom: 3rem;
+	margin-bottom: 25px;
     margin-top: 30px;
     color: #2E7D32;
     font-family: 'Poppins', sans-serif;
@@ -141,15 +141,16 @@ h1::after {
 }
 
 .circles {
-	width: 600px;
+	width: 850px;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-between;
+
 }
 
 .circle {
-	width: 200px;
-	height: 200px;
+	width: 300px;
+	height: 300px;
 	background: #8FD693;
 	border-radius: 50%;
 	display: flex;
@@ -158,15 +159,16 @@ h1::after {
 	text-align: center;
 	padding: 20px;
 	box-sizing: border-box;
+
 }
 
 .circle p {
-    font-size: 0.5rem;
     color: #2E7D32;
-    line-height: 1.3;
+    line-height: 1.4;
     font-weight: 500;
     letter-spacing: 0.3px;
     margin: 0;
+    font-size: 1.1rem;
 }
 
 
@@ -220,11 +222,6 @@ h1::after {
 
 .donationBoxes button:hover {
 	background-color: #45a049;
-}
-
-.circle p {
-	padding: 20px;
-	font-size: 14px;
 }
 
 
@@ -421,7 +418,7 @@ button {
     justify-content: center;
 
     gap: 20%;
-    margin-top: 5%;
+
 
 }
 
@@ -446,12 +443,15 @@ button {
 
 /*Footer All Pages */
 footer {
-    background-color: #40bf80;
+    background-color: #2E7D32;
     color: white;
     padding: 20px;
     text-align: center;
-    margin-top: 80px;
+    border-radius: 10px;
+    margin: 75px 5px 0px;
 }
+
+
 
 footer h3 {
     margin-bottom: 10px;
@@ -468,4 +468,9 @@ footer a {
 
 footer a:hover {
     text-decoration: underline;
+}
+
+.footer-headers,
+.footer-content {
+    display: contents;
 }
